integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_group_tests__mpl_core_get_assets_by_group_for_group_with_asset.snap
---
source: integration_tests/tests/integration_tests/mpl_core_group_tests.rs
assertion_line: 321
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 50,
  "page": 1,
  "items": [
    {
      "interface": "MplCoreAsset",
      "id": "9XBVndadik4nt25UnBhhMQqGzVMXbcYy3dmWLeAkFMVb",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://example.com/das-test-asset-in-group.json",
        "files": [],
        "metadata": {
          "name": "DAS Test: Asset In Group",
          "symbol": ""
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "group",
          "group_value": "56RUh47zGh7iYZRq9QzptfwTJhtLsmYbbZDNknVwAgqQ"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "plugins": {
        "groups": {
          "data": {
            "groups": [
              "56RUh47zGh7iYZRq9QzptfwTJhtLsmYbbZDNknVwAgqQ"
            ]
          },
          "index": 0,
          "offset": 156,
          "authority": {
            "type": "UpdateAuthority",
            "address": null
          }
        }
      },
      "mpl_core_info": {
        "plugins_json_version": 1
      },
      "external_plugins": [],
      "is_agent": false,
      "asset_signer": "4U39jHpPkFEEsWe1XvGpMHkPkGHpJdxtN6MdoboBMGkB"
    }
  ]
}
