integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_group_tests__mpl_core_get_child_group.snap
---
source: integration_tests/tests/integration_tests/mpl_core_group_tests.rs
assertion_line: 203
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplCoreGroup",
  "id": "GpYTJ84neoZMM6ZvGRMHRyLZZgjciqfVzUiPNTnzw3XN",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/das-test-child-group.json",
    "files": [],
    "metadata": {
      "name": "DAS Test: Child Group",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "group",
      "group_value": "GXemjec273GC6fXTMmCB7yguPxRMhKed16mZNDghkbKJ"
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "plugins": {},
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [],
  "is_agent": false
}
